@@ -3386,6 +3386,7 @@ Stefan Hofmann <stefan.hofmann@t-online.de>
  for making the info files of recordings only be re-read if they have been modified
  for reporting missing setting the file name of the info file after renaming a recording
  for adding '~' to the list of delimiters in cTextWrapper
+ for suggesting to delete old recording info before reading modified info file
 
 Stefan Blochberger <Stefan.Blochberger@gmx.de>
  for suggesting to automatically display the progress display whenever replay of a
