@@ -10090,7 +10090,7 @@ Video Disk Recorder Revision History
 - Added missing locks to SetMenuItem() functions.
 - Revised locking in cMenuSchedule and cMenuWhatsOn.
 
-2025-04-08:
+2025-04-11:
 
 - Added the "override" keyword to virtual functions reimplemented in derived classes.
   Plugins may want to do the same, but don't have to.
@@ -10116,3 +10116,5 @@ Video Disk Recorder Revision History
 - Moved the call to Empty() back into the pmSlow case (thanks to Andreas Baierl).
 - Fixed spurious times shown in the progress display when switching from "play" to "fast
   forward".
+- Now deleting old recording info before reading modified info file (suggested by
+  Stefan Hofmann).
